[package]
name = "morst"
version = "0.1.0"
authors = ["scott-olson <scotteolson3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mors = "0.1.1"
rocket = "0.4.5"
log = { version = "0.4.8", features = ["serde"] }


